--- a/.github/workflows/cross-platform-build.yml
+++ b/.github/workflows/cross-platform-build.yml
@@ -18,21 +18,24 @@ jobs:
 
       - name: Compile without protection
         run: |
-          g++ -o overflow main.cpp
-          echo "=== Running without protection ==="
-          ./overflow || true
+          g++ -std=c++17 -fno-stack-protector -no-pie -O0 -o overflow main.cpp
+          echo "=== Running without protection (mode 3) ==="
+          echo "3" | ./overflow || true
+          ls -a
 
       - name: Compile with stack protector
         run: |
-          g++ -fstack-protector-all -o overflow_protected main.cpp
-          echo "=== Running with stack protector ==="
-          ./overflow_protected || true
+          g++ -std=c++17 -fstack-protector-all -O1 -o overflow_protected main.cpp
+          echo "=== Running with stack protector (mode 3) ==="
+          echo "3" | ./overflow_protected || true
+          ls -a
 
       - name: Compile with AddressSanitizer
         run: |
-          g++ -fsanitize=address -g -O1 -o overflow_asan main.cpp
-          echo "=== Running with AddressSanitizer (GCC) ==="
-          ASAN_OPTIONS=detect_stack_use_after_return=1 ./overflow_asan || true
+          g++ -std=c++17 -fsanitize=address -g -O1 -o overflow_asan main.cpp
+          echo "=== Running with AddressSanitizer (mode 3) ==="
+          echo "3" | ./overflow_asan || true
+          ls -a
 
   ubuntu-clang:
     name: Ubuntu (Clang)
@@ -49,44 +52,21 @@ jobs:
 
       - name: Compile without protection
         run: |
-          clang++ -o overflow main.cpp
-          echo "=== Running without protection ==="
-          ./overflow || true
+          clang++ -std=c++17 -fno-stack-protector -no-pie -O0 -o overflow main.cpp
+          echo "=== Running without protection (mode 3) ==="
+          echo "3" | ./overflow || true
+          ls -a
 
       - name: Compile with stack protector
         run: |
-          clang++ -fstack-protector-all -o overflow_protected main.cpp
-          echo "=== Running with stack protector ==="
-          ./overflow_protected || true
+          clang++ -std=c++17 -fstack-protector-all -O1 -o overflow_protected main.cpp
+          echo "=== Running with stack protector (mode 3) ==="
+          echo "3" | ./overflow_protected || true
+          ls -a
 
       - name: Compile with AddressSanitizer
         run: |
-          clang++ -fsanitize=address -g -O1 -o overflow_asan main.cpp
-          echo "=== Running with AddressSanitizer (Clang) ==="
-          ASAN_OPTIONS=detect_stack_use_after_return=1 ./overflow_asan || true
-
-  macos-clang:
-    name: macOS (Clang)
-    runs-on: macos-latest
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Compile without protection
-        run: |
-          clang++ -o overflow main.cpp
-          echo "=== Running without protection ==="
-          ./overflow || true
-
-      - name: Compile with stack protector
-        run: |
-          clang++ -fstack-protector-all -o overflow_protected main.cpp
-          echo "=== Running with stack protector ==="
-          ./overflow_protected || true
-
-      - name: Compile with AddressSanitizer
-        run: |
-          clang++ -fsanitize=address -g -O1 -o overflow_asan main.cpp
-          echo "=== Running with AddressSanitizer (macOS Clang) ==="
-          ASAN_OPTIONS=detect_stack_use_after_return=1 ./overflow_asan || true
+          clang++ -std=c++17 -fsanitize=address -g -O1 -o overflow_asan main.cpp
+          echo "=== Running with AddressSanitizer (mode 3) ==="
+          echo "3" | ./overflow_asan || true
+          ls -a
